# static_code_analyzer

./: .gitignore  CMakeLists.txt  block.c  block.h  blocks_sample.c  code_analyzer.c  code_analyzer.h  cvector.h  entity.c  entity.h  input.c  main.c  parser.c  parser.h  print.c  print.h  statement.h  string_functions.c  string_functions.h  test.c  test.h
samples/: directives.c  do_while.c  functions.c  input.c  nesting_loops1.c  nesting_loops2.c  one_line_blocks.c  sample_copy.c
